--- a/src/main/resources/templates/addRideForm.html
+++ b/src/main/resources/templates/addRideForm.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Ride Form</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrapCSS/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome for Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles -->
+
     <style>
         body {
             background: linear-gradient(to right, #83a4d4, #b6fbff); /* Dégradé turquoise */
@@ -108,7 +111,7 @@
 <div class="container d-flex justify-content-center">
     <div class="form-container">
         <h2 class="text-center mb-4">Add a New Ride</h2>
-        <form action="#" th:action="@{saveRide}" th:object="${ride}" method="POST">
+        <form action="#" th:action="@{/saveRide}" th:object="${ride}" method="POST">
             <div class="mb-3">
                 <label for="startLocation" class="form-label"><i class="fas fa-map-marker-alt icon"></i> Start Location</label>
                 <input type="text" th:field="*{startLocation}" id="startLocation" class="form-control" placeholder="Enter start location" required>
@@ -141,6 +144,6 @@
 </footer>
 
 <!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../static/js/bootstrapJS/bootstrap.bundle.min.js"></script>
 </body>
 </html>
