--- a/src/main/resources/templates/newRide.html
+++ b/src/main/resources/templates/newRide.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Save Ride</title>
+    <title>New Ride</title>
 
     <!-- Bootstrap CSS -->
     <link href="/css/bootstrapCSS/bootstrap.min.css" rel="stylesheet">
