--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -185,7 +185,7 @@
             <span class="circle-icon"><i class="fas fa-plus"></i></span> Publish Ride
         </button>
         <a href="/loginn"><i class="fas fa-sign-in-alt"></i> Log In</a>
-        <a href="/showNewUserForm"><i class="fas fa-user-plus"></i> Sign Up</a>
+        <a href="/register"><i class="fas fa-user-plus"></i> Sign Up</a>
     </nav>
 </header>
 
