--- a/src/main/resources/templates/loginn.html
+++ b/src/main/resources/templates/loginn.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Connexion</title>
 </head>
 <body>
-<h2>Login</h2>
+<h2>Connexion</h2>
+<form th:action="@{/loginn}" method="POST">
+  <label for="email">Email :</label>
+  <input type="email" id="email" name="email" required><br><br>
 
+  <label for="password">Mot de passe :</label>
+  <input type="password" id="password" name="password" required><br><br>
 
+  <button type="submit">Se connecter</button>
+  <p th:if="${error}" th:text="${error}" style="color:red;"></p>
+</form>
 </body>
 </html>
